# ugv

./: .gitignore  Chassis.step  Dockerfile  README.md  base_link.f3d  base_link_colour.f3d  base_link_colour.step  first_run.py  flash_esp32.sh  prepare_docker.sh  run_microros.sh  run_robot.sh  ugv.f3d  wifi_connect.sh
odometry_test/: CMakeLists.txt  package.xml
odometry_test/src/: square_follower.cpp
sllidar_ros2/: lidar_install.sh
sllidar_ros2/launch/: view_sllidar_c1_launch.py
sllidar_ros2/scripts/: create_udev_rules.sh
twist_mux/: CMakeLists.txt
twist_mux/config/: twist_mux_locks.yaml  twist_mux_topics.yaml
twist_mux/launch/: twist_mux_launch.py
twist_mux/src/: twist_marker.cpp  twist_mux.cpp
ugv_chassis_firmware/: CMakeLists.txt  package.xml  ugv_chassis_firmware.xml  ugv_chassis_firmware_install.sh
ugv_chassis_firmware/esp32dev-microros/: PCB.fzz  Wiring.fzz  firmware_run.sh  platformio.ini  ugv_interfaces_install.sh
ugv_chassis_firmware/esp32dev-microros/docs/: Menu instruction · makerbase-mks_MKS-SERVO42C Wiki.html  PCB.fzz
ugv_chassis_firmware/esp32dev-microros/extra_packages/ugv_interfaces/: CMakeLists.txt
ugv_chassis_firmware/esp32dev-microros/extra_packages/ugv_interfaces/msg/: MotorsOdom.msg
ugv_chassis_firmware/esp32dev-microros/src/: DCMotor.cpp  DCMotor.h  DCMotorConfig.cpp  DCMotorConfig.h  FourPinStepperMotor.cpp  FourPinStepperMotor.h  Motor.cpp  Motor.h  PIDController.cpp  PIDController.h  TwoPinStepperMotor.cpp  TwoPinStepperMotor.h  basic.ino  dc-voltage.ino  esp32.ino  esp32.ino.cpp
ugv_chassis_firmware/include/ugv_chassis_firmware/: ugv_chassis_hardware.hpp  visibility_control.h
ugv_chassis_firmware/src/: ugv_chassis_hardware.cpp
ugv_chassis_firmware/test/: test_ugv_chassis_hardware.cpp
ugv_control/: CMakeLists.txt  install.sh  package.xml  ugv_control_install.sh
ugv_control/config/: diff_drive_controllers.yaml  display.rviz
ugv_description/: CMakeLists.txt  install.sh  package.xml  setup.cfg  setup.py  ugv v14.f3d  ugv v3.f3d  ugv_description_install.sh
ugv_firmware/: platformio.ini
ugv_hardware_interface/: CMakeLists.txt  package.xml  ugv_hardware_interface.xml  ugv_hardware_interface_install.sh
ugv_interfaces/: CMakeLists.txt  package.xml  ugv_interfaces_install.sh
ugv_mapping/: CMakeLists.txt  package.xml  ugv_mapping_install.sh
ugv_nav/: CMakeLists.txt  package.xml  ugv_nav_install.sh
(+76 files in other folders)
